--- a/index.html
+++ b/index.html
@@ -3777,7 +3777,7 @@
         <div class="numero-atomico">62</div>
         <div class="label">
           <div class="simbolo">Sm</div>
-          <div class="name">Samarium</div>
+          <div class="name">Samario</div>
         </div>
         <div class="masa-atomica">150.36</div>
         <ul class="atomic-weight">
@@ -3875,7 +3875,7 @@
         <div class="numero-atomico">63</div>
         <div class="label">
           <div class="simbolo">Eu</div>
-          <div class="name">Europium</div>
+          <div class="name">Europio</div>
         </div>
         <div class="masa-atomica">151.96</div>
         <ul class="atomic-weight">
@@ -3974,7 +3974,7 @@
         <div class="numero-atomico">64</div>
         <div class="label">
           <div class="simbolo">Gd</div>
-          <div class="name">Gadolinium</div>
+          <div class="name">Gadolinio</div>
         </div>
         <div class="masa-atomica">157.25</div>
         <ul class="atomic-weight">
@@ -4074,7 +4074,7 @@
         <div class="numero-atomico">65</div>
         <div class="label">
           <div class="simbolo">Tb</div>
-          <div class="name">Terbium</div>
+          <div class="name">Terbio</div>
         </div>
         <div class="masa-atomica">158.93</div>
         <ul class="atomic-weight">
@@ -4175,7 +4175,7 @@
         <div class="numero-atomico">66</div>
         <div class="label">
           <div class="simbolo">Dy</div>
-          <div class="name">Dysprosium</div>
+          <div class="name">Disprosio</div>
         </div>
         <div class="masa-atomica">162.5</div>
         <ul class="atomic-weight">
@@ -4277,7 +4277,7 @@
         <div class="numero-atomico">67</div>
         <div class="label">
           <div class="simbolo">Ho</div>
-          <div class="name">Holmium</div>
+          <div class="name">Holmio</div>
         </div>
         <div class="masa-atomica">164.93</div>
         <ul class="atomic-weight">
@@ -4380,7 +4380,7 @@
         <div class="numero-atomico">68</div>
         <div class="label">
           <div class="simbolo">Er</div>
-          <div class="name">Erbium</div>
+          <div class="name">Erbio</div>
         </div>
         <div class="masa-atomica">167.26</div>
         <ul class="atomic-weight">
@@ -4484,7 +4484,7 @@
         <div class="numero-atomico">69</div>
         <div class="label">
           <div class="simbolo">Tm</div>
-          <div class="name">Thulium</div>
+          <div class="name">Tulio</div>
         </div>
         <div class="masa-atomica">168.93</div>
         <ul class="atomic-weight">
@@ -4589,7 +4589,7 @@
         <div class="numero-atomico">70</div>
         <div class="label">
           <div class="simbolo">Yb</div>
-          <div class="name">Ytterbium</div>
+          <div class="name">Iterbio</div>
         </div>
         <div class="masa-atomica">173.05</div>
         <ul class="atomic-weight">
@@ -4695,7 +4695,7 @@
         <div class="numero-atomico">71</div>
         <div class="label">
           <div class="simbolo">Lu</div>
-          <div class="name">Lutetium</div>
+          <div class="name">Lutecio</div>
         </div>
         <div class="masa-atomica">174.97</div>
         <ul class="atomic-weight">
@@ -4802,7 +4802,7 @@
         <div class="numero-atomico">72</div>
         <div class="label">
           <div class="simbolo">Hf</div>
-          <div class="name">Hafnium</div>
+          <div class="name">Hafnio</div>
         </div>
         <div class="masa-atomica">178.49</div>
         <ul class="atomic-weight">
@@ -4910,7 +4910,7 @@
         <div class="numero-atomico">73</div>
         <div class="label">
           <div class="simbolo">Ta</div>
-          <div class="name">Tantalum</div>
+          <div class="name">Tántalo</div>
         </div>
         <div class="masa-atomica">180.95</div>
         <ul class="atomic-weight">
@@ -5019,7 +5019,7 @@
         <div class="numero-atomico">74</div>
         <div class="label">
           <div class="simbolo">W</div>
-          <div class="name">Tungsten</div>
+          <div class="name">Tungsteno</div>
         </div>
         <div class="masa-atomica">183.84</div>
         <ul class="atomic-weight">
@@ -5129,7 +5129,7 @@
         <div class="numero-atomico">75</div>
         <div class="label">
           <div class="simbolo">Re</div>
-          <div class="name">Rhenium</div>
+          <div class="name">Renio</div>
         </div>
         <div class="masa-atomica">186.21</div>
         <ul class="atomic-weight">
@@ -5240,7 +5240,7 @@
         <div class="numero-atomico">76</div>
         <div class="label">
           <div class="simbolo">Os</div>
-          <div class="name">Osmium</div>
+          <div class="name">Osmio</div>
         </div>
         <div class="masa-atomica">190.23</div>
         <ul class="atomic-weight">
@@ -5352,7 +5352,7 @@
         <div class="numero-atomico">77</div>
         <div class="label">
           <div class="simbolo">Ir</div>
-          <div class="name">Iridium</div>
+          <div class="name">Iridio</div>
         </div>
         <div class="masa-atomica">192.22</div>
         <ul class="atomic-weight">
@@ -5465,7 +5465,7 @@
         <div class="numero-atomico">78</div>
         <div class="label">
           <div class="simbolo">Pt</div>
-          <div class="name">Platinum</div>
+          <div class="name">Platino</div>
         </div>
         <div class="masa-atomica">195.08</div>
         <ul class="atomic-weight">
@@ -5579,7 +5579,7 @@
         <div class="numero-atomico">79</div>
         <div class="label">
           <div class="simbolo">Au</div>
-          <div class="name">Gold</div>
+          <div class="name">Oro</div>
         </div>
         <div class="masa-atomica">196.97</div>
         <ul class="atomic-weight">
@@ -5694,7 +5694,7 @@
         <div class="numero-atomico">80</div>
         <div class="label">
           <div class="simbolo">Hg</div>
-          <div class="name">Mercury</div>
+          <div class="name">Mercurio</div>
         </div>
         <div class="masa-atomica">200.59</div>
         <ul class="atomic-weight">
@@ -5810,7 +5810,7 @@
         <div class="numero-atomico">81</div>
         <div class="label">
           <div class="simbolo">Tl</div>
-          <div class="name">Thallium</div>
+          <div class="name">Talio</div>
         </div>
         <div class="masa-atomica">204.38</div>
         <ul class="atomic-weight">
@@ -5927,7 +5927,7 @@
         <div class="numero-atomico">82</div>
         <div class="label">
           <div class="simbolo">Pb</div>
-          <div class="name">Lead</div>
+          <div class="name">Plomo</div>
         </div>
         <div class="masa-atomica">207.2</div>
         <ul class="atomic-weight">
@@ -6045,7 +6045,7 @@
         <div class="numero-atomico">83</div>
         <div class="label">
           <div class="simbolo">Bi</div>
-          <div class="name">Bismuth</div>
+          <div class="name">Bismuto</div>
         </div>
         <div class="masa-atomica">208.98</div>
         <ul class="atomic-weight">
@@ -6058,7 +6058,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c16 r6">
+    <div class="elemento Metaloide c16 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6405,7 +6405,7 @@
         <div class="numero-atomico">86</div>
         <div class="label">
           <div class="simbolo">Rn</div>
-          <div class="name">Radon</div>
+          <div class="name">Radón</div>
         </div>
         <div class="masa-atomica">(222)</div>
         <ul class="atomic-weight">
@@ -6529,7 +6529,7 @@
         <div class="numero-atomico">87</div>
         <div class="label">
           <div class="simbolo">Fr</div>
-          <div class="name">Francium</div>
+          <div class="name">Francio</div>
         </div>
         <div class="masa-atomica">(223)</div>
         <ul class="atomic-weight">
@@ -6655,7 +6655,7 @@
         <div class="numero-atomico">88</div>
         <div class="label">
           <div class="simbolo">Ra</div>
-          <div class="name">Radium</div>
+          <div class="name">Radio</div>
         </div>
         <div class="masa-atomica">(226)</div>
         <ul class="atomic-weight">
@@ -6782,7 +6782,7 @@
         <div class="numero-atomico">89</div>
         <div class="label">
           <div class="simbolo">Ac</div>
-          <div class="name">Actinium</div>
+          <div class="name">Actinio</div>
         </div>
         <div class="masa-atomica">(227)</div>
         <ul class="atomic-weight">
@@ -6910,7 +6910,7 @@
         <div class="numero-atomico">90</div>
         <div class="label">
           <div class="simbolo">Th</div>
-          <div class="name">Thorium</div>
+          <div class="name">Torio</div>
         </div>
         <div class="masa-atomica">232.04</div>
         <ul class="atomic-weight">
@@ -7039,7 +7039,7 @@
         <div class="numero-atomico">91</div>
         <div class="label">
           <div class="simbolo">Pa</div>
-          <div class="name">Protactinium</div>
+          <div class="name">Protactinio</div>
         </div>
         <div class="masa-atomica">231.04</div>
         <ul class="atomic-weight">
@@ -7169,7 +7169,7 @@
         <div class="numero-atomico">92</div>
         <div class="label">
           <div class="simbolo">U</div>
-          <div class="name">Uranium</div>
+          <div class="name">Uranio</div>
         </div>
         <div class="masa-atomica">238.03</div>
         <ul class="atomic-weight">
@@ -7300,7 +7300,7 @@
         <div class="numero-atomico">93</div>
         <div class="label">
           <div class="simbolo">Np</div>
-          <div class="name">Neptunium</div>
+          <div class="name">Neptunio</div>
         </div>
         <div class="masa-atomica">(237)</div>
         <ul class="atomic-weight">
@@ -7432,7 +7432,7 @@
         <div class="numero-atomico">94</div>
         <div class="label">
           <div class="simbolo">Pu</div>
-          <div class="name">Plutonium</div>
+          <div class="name">Plutonio</div>
         </div>
         <div class="masa-atomica">(244)</div>
         <ul class="atomic-weight">
@@ -7565,7 +7565,7 @@
         <div class="numero-atomico">95</div>
         <div class="label">
           <div class="simbolo">Am</div>
-          <div class="name">Americium</div>
+          <div class="name">Americio</div>
         </div>
         <div class="masa-atomica">(243)</div>
         <ul class="atomic-weight">
@@ -7699,7 +7699,7 @@
         <div class="numero-atomico">96</div>
         <div class="label">
           <div class="simbolo">Cm</div>
-          <div class="name">Curium</div>
+          <div class="name">Curio</div>
         </div>
         <div class="masa-atomica">(247)</div>
         <ul class="atomic-weight">
@@ -7834,7 +7834,7 @@
         <div class="numero-atomico">97</div>
         <div class="label">
           <div class="simbolo">Bk</div>
-          <div class="name">Berkelium</div>
+          <div class="name">Berkelio</div>
         </div>
         <div class="masa-atomica">(247)</div>
         <ul class="atomic-weight">
@@ -7970,7 +7970,7 @@
         <div class="numero-atomico">98</div>
         <div class="label">
           <div class="simbolo">Cf</div>
-          <div class="name">Californium</div>
+          <div class="name">Californio</div>
         </div>
         <div class="masa-atomica">(251)</div>
         <ul class="atomic-weight">
@@ -8107,7 +8107,7 @@
         <div class="numero-atomico">99</div>
         <div class="label">
           <div class="simbolo">Es</div>
-          <div class="name">Einsteinium</div>
+          <div class="name">Einstenio</div>
         </div>
         <div class="masa-atomica">(252)</div>
         <ul class="atomic-weight">
@@ -8245,7 +8245,7 @@
         <div class="numero-atomico">100</div>
         <div class="label">
           <div class="simbolo">Fm</div>
-          <div class="name">Fermium</div>
+          <div class="name">Fermio</div>
         </div>
         <div class="masa-atomica">(257)</div>
         <ul class="atomic-weight">
@@ -8384,7 +8384,7 @@
         <div class="numero-atomico">101</div>
         <div class="label">
           <div class="simbolo">Md</div>
-          <div class="name">Mendelevium</div>
+          <div class="name">Mendelevio</div>
         </div>
         <div class="masa-atomica">(258)</div>
         <ul class="atomic-weight">
@@ -8524,7 +8524,7 @@
         <div class="numero-atomico">102</div>
         <div class="label">
           <div class="simbolo">No</div>
-          <div class="name">Nobelium</div>
+          <div class="name">Nobelio</div>
         </div>
         <div class="masa-atomica">(259)</div>
         <ul class="atomic-weight">
@@ -8665,7 +8665,7 @@
         <div class="numero-atomico">103</div>
         <div class="label">
           <div class="simbolo">Lr</div>
-          <div class="name">Lawrencium</div>
+          <div class="name">Lawrencio</div>
         </div>
         <div class="masa-atomica">(266)</div>
         <ul class="atomic-weight">
@@ -8807,7 +8807,7 @@
         <div class="numero-atomico">104</div>
         <div class="label">
           <div class="simbolo">Rf</div>
-          <div class="name">Rutherfordium</div>
+          <div class="name">Rutherfordio</div>
         </div>
         <div class="masa-atomica">(267)</div>
         <ul class="atomic-weight">
@@ -8950,7 +8950,7 @@
         <div class="numero-atomico">105</div>
         <div class="label">
           <div class="simbolo">Db</div>
-          <div class="name">Dubnium</div>
+          <div class="name">Dubnio</div>
         </div>
         <div class="masa-atomica">(268)</div>
         <ul class="atomic-weight">
@@ -9094,7 +9094,7 @@
         <div class="numero-atomico">106</div>
         <div class="label">
           <div class="simbolo">Sg</div>
-          <div class="name">Seaborgium</div>
+          <div class="name">Seaborgio</div>
         </div>
         <div class="masa-atomica">(269)</div>
         <ul class="atomic-weight">
@@ -9239,7 +9239,7 @@
         <div class="numero-atomico">107</div>
         <div class="label">
           <div class="simbolo">Bh</div>
-          <div class="name">Bohrium</div>
+          <div class="name">Bohrio</div>
         </div>
         <div class="masa-atomica">(270)</div>
         <ul class="atomic-weight">
